# server/public/openapi.yaml
@@ -701,7 +701,7 @@ paths:
           in: query
       responses:
         "200":
-          description: Object contaning Philippine main island groups including regions
+          description: Object containing Philippine main island groups including regions
           content:
             application/json:
               schema:
@@ -858,7 +858,7 @@ paths:
           in: query
       responses:
         "200":
-          description: Object contaning Philippine main island groups including regions
+          description: Object containing Philippine main island groups including regions
           content:
             application/json:
               schema:
@@ -1186,7 +1186,7 @@ paths:
           in: query
       responses:
         "200":
-          description: Object contaning Philippine regions including provinces and
+          description: Object containing Philippine regions including provinces and
             municipalities
           content:
             application/json:
@@ -1382,8 +1382,8 @@ paths:
           in: query
       responses:
         "200":
-          description: Object contaning one (1) Philippine region data excluding provinces
-            and municipalities
+          description: Object containing one (1) Philippine region data excluding
+            provinces and municipalities
           content:
             application/json:
               schema:
@@ -1520,7 +1520,7 @@ paths:
           in: query
       responses:
         "200":
-          description: Object contaning a Philippine region data including provinces and
+          description: Object containing a Philippine region data including provinces and
             municipalities
           content:
             application/json:
@@ -1685,6 +1685,36 @@ paths:
                   - message
                   - status
                 description: Server error response information
+        "404":
+          description: Region not found error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: false
+                    description: Server query failure flag
+                  error:
+                    type: string
+                    description: Common error message text
+                    example: Validation Error
+                  message:
+                    type: array
+                    items:
+                      type: string
+                    description: List of error messages
+                    example:
+                      - Region not found
+                  status:
+                    type: number
+                    description: HTTP error status code
+                    example: 400
+                required:
+                  - error
+                  - message
+                  - status
   /api/provinces:
     get:
       description: List of provinces in the Philippines including only province name
@@ -1835,7 +1865,7 @@ paths:
           in: query
       responses:
         "200":
-          description: Object contaning Philippine regions including provinces and
+          description: Object containing Philippine regions including provinces and
             municipalities
           content:
             application/json:
@@ -1879,95 +1909,54 @@ paths:
                       properties:
                         _id:
                           type: string
+                          description: Province ID
+                          example: 68bc452bf0a9414a4312e5b1
+                        regionId:
+                          type: string
                           description: Region ID
                           example: 68bc452bf0a9414a4312e591
-                        islandId:
-                          type: string
-                          description: Island document ID
-                          example: 68bc452af0a9414a4312e589
                         name:
                           type: string
                           maxLength: 40
-                          description: Region name
-                          example: Region IV-A
-                        abbrev:
-                          type: string
-                          nullable: true
-                          maxLength: 20
-                          description: Abbreviation name or code
-                          example: CALABARZON
-                        regionalName:
-                          type: string
-                          description: Long-form regional name
-                          example: CALABARZON
-                        regionalCode:
-                          type: string
-                          nullable: true
-                          maxLength: 5
-                          description: Region code
-                          example: 4A
-                        provinces:
+                          description: Province name
+                          example: Batangas
+                        municipalities:
                           type: array
                           items:
                             type: object
                             properties:
                               _id:
                                 type: string
-                                description: Province ID
-                                example: 68bc452bf0a9414a4312e5b1
+                                description: Municipality ID
+                                example: 68bc452bf0a9414a4312e753
                               regionId:
                                 type: string
                                 description: Region ID
                                 example: 68bc452bf0a9414a4312e591
+                              provinceId:
+                                type: string
+                                description: Province ID
+                                example: 68bc452bf0a9414a4312e5b1
                               name:
                                 type: string
                                 maxLength: 40
-                                description: Province name
-                                example: Batangas
-                              municipalities:
-                                type: array
-                                items:
-                                  type: object
-                                  properties:
-                                    _id:
-                                      type: string
-                                      description: Municipality ID
-                                      example: 68bc452bf0a9414a4312e753
-                                    regionId:
-                                      type: string
-                                      description: Region ID
-                                      example: 68bc452bf0a9414a4312e591
-                                    provinceId:
-                                      type: string
-                                      description: Province ID
-                                      example: 68bc452bf0a9414a4312e5b1
-                                    name:
-                                      type: string
-                                      maxLength: 40
-                                      description: Municipality name
-                                      example: Agoncillo
-                                    numDocs:
-                                      type: number
-                                      description: Random number
-                                      example: 0
-                                  required:
-                                    - _id
-                                    - regionId
-                                    - provinceId
-                                    - name
-                                    - numDocs
+                                description: Municipality name
+                                example: Agoncillo
+                              numDocs:
+                                type: number
+                                description: Random number
+                                example: 0
                             required:
                               - _id
                               - regionId
+                              - provinceId
                               - name
-                              - municipalities
+                              - numDocs
                       required:
                         - _id
-                        - islandId
+                        - regionId
                         - name
-                        - abbrev
-                        - regionalCode
-                        - provinces
+                        - municipalities
                 required:
                   - total
                   - metadata
@@ -2031,7 +2020,7 @@ paths:
           in: query
       responses:
         "200":
-          description: Object contaning one (1) Philippine province data excluding
+          description: Object containing one (1) Philippine province data excluding
             municipalities
           content:
             application/json:
@@ -2151,7 +2140,7 @@ paths:
           in: query
       responses:
         "200":
-          description: Object contaning a Philippine region data including provinces and
+          description: Object containing a Philippine region data including provinces and
             municipalities
           content:
             application/json:
@@ -2443,7 +2432,7 @@ paths:
           in: query
       responses:
         "200":
-          description: Object contaning one (1) Philippine municipality data
+          description: Object containing one (1) Philippine municipality data
           content:
             application/json:
               schema:
@@ -2543,6 +2532,36 @@ paths:
                   - message
                   - status
                 description: Server error response information
+        "404":
+          description: Municipality data not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: false
+                    description: Server query failure flag
+                  error:
+                    type: string
+                    description: Common error message text
+                    example: Validation Error
+                  message:
+                    type: array
+                    items:
+                      type: string
+                    description: List of error messages
+                    example:
+                      - Municipality not found
+                  status:
+                    type: number
+                    description: HTTP error status code
+                    example: 400
+                required:
+                  - error
+                  - message
+                  - status
   /api/stats/{id}:
     get:
       description: Retrieves municipality stats data by ID
@@ -2552,10 +2571,10 @@ paths:
       parameters:
         - schema:
             type: string
-            description: Stats `id` is the same as `municipalityId`
+            description: Municipality ID
             example: 68bc452bf0a9414a4312e753
           required: true
-          description: Stats `id` is the same as `municipalityId`
+          description: Municipality ID
           name: id
           in: path
         - schema:
@@ -2572,7 +2591,7 @@ paths:
           in: query
       responses:
         "200":
-          description: Object contaning one (1) random Philippine municipality stat data
+          description: Object containing one (1) random Philippine municipality stat data
           content:
             application/json:
               schema:
@@ -2582,10 +2601,6 @@ paths:
                     type: boolean
                     default: true
                     description: Server query success flag
-                  total:
-                    type: number
-                    description: Total number of items in the `data[]` array
-                    example: 1
                   metadata:
                     type: object
                     properties:
@@ -2626,7 +2641,6 @@ paths:
                       - municipalityId
                       - numBrgy
                 required:
-                  - total
                   - metadata
                   - data
         "400":
@@ -2659,3 +2673,33 @@ paths:
                   - message
                   - status
                 description: Server error response information
+        "404":
+          description: Stats data for municipality not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: false
+                    description: Server query failure flag
+                  error:
+                    type: string
+                    description: Common error message text
+                    example: Validation Error
+                  message:
+                    type: array
+                    items:
+                      type: string
+                    description: List of error messages
+                    example:
+                      - Municipality stats not found
+                  status:
+                    type: number
+                    description: HTTP error status code
+                    example: 400
+                required:
+                  - error
+                  - message
+                  - status
